--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Van Control</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/base.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/components/weather.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/components/system.css') }}"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <!-- <div class="card">
-        <h1>Van Control</h1>
-        <p>Current Time: {{ current_time }}</p>
-      </div> -->
+{% extends "base.html" %} {% block content %}
+<!-- Left Column -->
+{% include 'components/weather.html' %}
 
-      {% include 'components/weather.html' %} {% include
-      'components/system.html' %}
-
-      <div class="card">
-        <h2>Controls</h2>
-        <form
-          action="{{ url_for('toggle_starlink', action='on' if not starlink_status else 'off') }}"
-          method="post"
-        >
-          <button type="submit" class="button">
-            {% if starlink_status %} Turn Off Starlink {% else %} Turn On
-            Starlink {% endif %}
-          </button>
-        </form>
-      </div>
-    </div>
-  </body>
-</html>
+<!-- Right Column -->
+<div class="right-column">
+  {% include 'components/starlink.html' %} {% include 'components/system.html'
+  %}
+</div>
+{% endblock %}
