--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
           rgba(221, 168, 101, 0.8) 50%,
           rgba(183, 125, 60, 0.3) 100%
         );
-        background-image: radial-gradient(
+        /* background-image: radial-gradient(
             circle at 20% 80%,
             rgba(140, 114, 104, 0.1) 0%,
             transparent 50%
@@ -37,7 +37,7 @@
             circle at 40% 40%,
             rgba(183, 125, 60, 0.05) 0%,
             transparent 50%
-          );
+          ); */
         overflow: hidden;
       }
 
@@ -68,7 +68,8 @@
         display: grid;
         grid-template-columns: 2fr 1fr;
         gap: 16px;
-        height: calc(100vh - 120px);
+        height: 100%;
+        /* calc(100vh - 120px); */
       }
 
       .card {
